#pragma once
#include <iostream>
#include <fstream>

//TODO program musi mit defaultni hodnoty a pokud oni nejsou zadane konfiguracnim
// souborem tak se pouziji defaultni hodnoty

class CConfigFile
{

};