#pragma once
#include <limits>
#include <sstream>
#include <iostream>


class CIntegerGetter{
public:
    static int getFromUser(int min, int max);
};